--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>com.qhe.usercenter.UserCenterApplication</mainClass>
-                    <skip>true</skip>
+                    <skip>false</skip>
                 </configuration>
                 <executions>
                     <execution>
